Написал логику страницы входа. Написал логику инициализации главной страницы, а также логику фильтрации по категории товара.